# pyaro-readers

./: .gitignore  README.md  pyproject.toml_future  setup.cfg
.github/workflows/: CI.yml
src/pyaro_readers/: __init__.py  units_helpers.py
src/pyaro_readers/aeronetsdareader/: AeronetSdaTimeseriesReader.py
src/pyaro_readers/aeronetsunreader/: AeronetSunTimeseriesReader.py
src/pyaro_readers/ascii2netcdf/: Ascii2NetcdfTimeseries.py
src/pyaro_readers/eeareader/: EEATimeseriesReader.py  __init__.py  data.toml  eeadownloader.py
src/pyaro_readers/harpreader/: harpreader.py
src/pyaro_readers/netcdf_rw/: Netcdf_RWTimeseries.py
src/pyaro_readers/nilupmfabsorptionreader/: NILUPMFAbsorptionReader.py
src/pyaro_readers/nilupmfebas/: EbasPmfReader.py  _logging.py  _lowlevel_helpers.py  _warnings.py  aerocom_browser.py  aux_var_helpers.py  colocation.py  combine_vardata_ungridded.py  const.py  ebas_file_index.py  ebas_nasa_ames.py  ebas_varinfo.py  geodesy.py  grid_io.py  helpers.py  helpers_landsea_masks.py  io_helpers.py  mathutils.py  metastandards.py  molmasses.py  obs_io.py  readungridded.py  readungriddedbase.py  region.py  region_defs.py  resources.py  stationdata.py  time_resampler.py  tstype.py  ungriddeddata.py  units_helpers.py  utils.py  varcollection.py  variable.py  variable_helpers.py  varnameinfo.py
tests/: test_AERONETSDATimeSeriesReader.py  test_AERONETTimeSeriesReader.py  test_Ascii2NetcdfTimeseries.py  test_EEAReader.py  test_EbasPmfTimeSeriesReader.py  test_HARPReader.py  test_NILUPMFAbsorptionReader.py  test_Netcdf_RWTimeseries.py
tests/testdata/: sinca-surface-157-999999-001.nc  sinca-surface-220-999999-001.nc
tests/testdata/PMF_Absorption/: Hyytiala_absorption_20171201_3mo_PMF_lev3.nas  MaceHead_absorption_20171201_3mo_PMF_lev3.nas  Melpitz_absorption_20171201_3mo_PMF_lev3.nas  Payerne_absorption_20171201_3mo_PMF_lev3.nas  Zeppelin_absorption_20171201_3mo_PMF_lev3.nas
(+16 files in other folders)
